refactored post to space, comment to review

--- a/meteor-app/client/templates/notifications/notifications.html
+++ b/meteor-app/client/templates/notifications/notifications.html
@@ -19,8 +19,8 @@
 
 <template name="notificationItem">
   <li>
-    <a href="{{notificationPostPath}}">
-      <strong>{{commenterName}}</strong> commented on your post
+    <a href="{{notificationSpacePath}}">
+      <strong>{{reviewerName}}</strong> reviewed on your space
     </a>
   </li>
 </template>
