--- a/meteor-app/client/templates/spaces/spaces_list.html
+++ b/meteor-app/client/templates/spaces/spaces_list.html
@@ -1,8 +1,8 @@
-<template name="postsList">
-  <div class="posts page">
+<template name="spacesList">
+  <div class="spaces page">
     <div class="wrapper">
-      {{#each posts}}
-        {{> postItem}}
+      {{#each spaces}}
+        {{> spaceItem}}
       {{/each}}
     </div>
     
