--- a/meteor-app/client/templates/includes/header.html
+++ b/meteor-app/client/templates/includes/header.html
@@ -11,15 +11,15 @@
     </div>
     <div class="collapse navbar-collapse" id="navigation">
       <ul class="nav navbar-nav">
-        <li class="{{activeRouteClass 'home' 'newPosts'}}">
-          <a href="{{pathFor 'newPosts'}}">New</a>
+        <li class="{{activeRouteClass 'home' 'newSpaces'}}">
+          <a href="{{pathFor 'newSpaces'}}">New</a>
         </li>
-        <li class="{{activeRouteClass  'bestPosts'}}">
-          <a href="{{pathFor 'bestPosts'}}">Best</a>
+        <li class="{{activeRouteClass  'bestSpaces'}}">
+          <a href="{{pathFor 'bestSpaces'}}">Best</a>
         </li>
         {{#if currentUser}}
-          <li class="{{activeRouteClass 'postSubmit'}}">
-            <a href="{{pathFor 'postSubmit'}}">Submit Post</a>
+          <li class="{{activeRouteClass 'spaceSubmit'}}">
+            <a href="{{pathFor 'spaceSubmit'}}">Submit Space</a>
           </li>
           <li class="dropdown">
             {{> notifications}}
