--- a/meteor-app/client/templates/reviews/review_submit.html
+++ b/meteor-app/client/templates/reviews/review_submit.html
@@ -1,12 +1,12 @@
-<template name="commentSubmit">
-  <form name="comment" class="comment-form form">
+<template name="reviewSubmit">
+  <form name="review" class="review-form form">
     <div class="form-group {{errorClass 'body'}}">
         <div class="controls">
-            <label for="body">Comment on this post</label>
+            <label for="body">Review on this space</label>
             <textarea name="body" id="body" class="form-control" rows="3"></textarea>
             <span class="help-block">{{errorMessage 'body'}}</span>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary">Add Comment</button>
+    <button type="submit" class="btn btn-primary">Add Review</button>
   </form>
 </template>
