Added map templates

--- a/meteor-app/client/templates/posts/post_page.html
+++ b/meteor-app/client/templates/posts/post_page.html
@@ -14,4 +14,7 @@
       <p>Please log in to leave a comment.</p>
     {{/if}}
   </div>
+    <div class="map-container">
+    {{>mapItem}}
+    </div>
 </template>
