--- a/meteor-app/client/stylesheets/style.css
+++ b/meteor-app/client/stylesheets/style.css
@@ -158,3 +158,9 @@ body {
   margin-bottom: 5px;
   pointer-events: auto;
 }
+
+.map-container {
+  width: 800px;
+  max-width: 100%;
+  height: 500px;
+}
