Added map templates

--- a/meteor-app/client/templates/maps/map.html
+++ b/meteor-app/client/templates/maps/map.html
@@ -1,11 +1,5 @@
-<template name="mapItem">
-    <head>
-        <title>map-demo</title>
-    </head>
-
-    <body>
+<template name="mapItem">>
     <div class="map-container">
         {{> googleMap name="exampleMap" options=exampleMapOptions}}
     </div>
-    </body>
 </template>
