--- a/meteor-app/client/templates/spaces/space_page.html
+++ b/meteor-app/client/templates/spaces/space_page.html
@@ -1,6 +1,8 @@
 <template name="spacePage">
   <div class="space-page page">
     {{> spaceItem}}
+      {{> mapItem}}
+      {{> spacePhoto}}
   
     <ul class="comments">
       {{#each reviews}}
@@ -14,7 +16,4 @@
       <p>Please log in to leave a comment.</p>
     {{/if}}
   </div>
-    <div class="map-container">
-        {{>mapItem}}
-    </div>
 </template>
