Added space photos to the main list screen.

--- a/meteor-app/client/templates/space-photo/space-list-photo.html
+++ b/meteor-app/client/templates/space-photo/space-list-photo.html
@@ -1,5 +1,5 @@
-<template name="spacePhoto">
-    <div class="space-page-photo">
+<template name="spaceListPhoto">
+    <div class="space-list-photo">
         <body><img src="/open-space-1.jpg"/></body>
     </div>
 </template>
