--- a/meteor-app/client/templates/spaces/spaces_list.html
+++ b/meteor-app/client/templates/spaces/spaces_list.html
@@ -3,6 +3,7 @@
     <div class="wrapper">
       {{#each spaces}}
         {{> spaceItem}}
+        {{> spaceListPhoto}}
       {{/each}}
     </div>
     
