--- a/meteor-app/client/stylesheets/style.css
+++ b/meteor-app/client/stylesheets/style.css
@@ -164,3 +164,16 @@ body {
   max-width: 100%;
   height: 500px;
 }
+
+.space-page-photo{
+  width: 800px;
+  max-width: 100%;
+  height: 500px;
+  overflow: hidden;
+}
+
+.space-list-photo{
+  width: 800px;
+  height: 300px;
+  overflow: hidden;
+}
