--- a/meteor-app/client/templates/includes/header.html
+++ b/meteor-app/client/templates/includes/header.html
@@ -8,6 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{{pathFor 'home'}}">GreenSquare</a>
+        {{> userLocation}}
     </div>
     <div class="collapse navbar-collapse" id="navigation">
       <ul class="nav navbar-nav">
