First steps towards implementing a grid

--- a/meteor-app/client/templates/space-photo/space-list-photo.html
+++ b/meteor-app/client/templates/space-photo/space-list-photo.html
@@ -1,5 +1,5 @@
 <template name="spaceListPhoto">
-    <div class="space-list-photo">
-        <body><img src="/open-space-1.jpg"/></body>
+    <div>
+        <body><img class="img-circle" src="/mouse.png"/></body>
     </div>
 </template>
