--- a/meteor-app/client/templates/space-photo/space-photo.html
+++ b/meteor-app/client/templates/space-photo/space-photo.html
@@ -1,5 +1,5 @@
 <template name="spacePhoto">
-    <div class="space-page-photo">
-        <body><img src="/open-space-1.jpg"/></body>
+    <div class="spacePhoto">
+        <body><img class="img-rounded" src="/images/open-space-1.jpg"/></body>
     </div>
 </template>
