--- a/meteor-app/client/templates/spaces/space_item.html
+++ b/meteor-app/client/templates/spaces/space_item.html
@@ -1,11 +1,11 @@
 <template name="spaceItem">
   <div class="space">
-    <a href="#" class="upvote btn btn-default {{upvotedClass}}">⬆</a>
+    {{> spaceListPhoto}}
     <div class="space-content">
-      <h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>
+      <!--<h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>-->
       <p>
-        {{pluralize votes "Vote"}},
-        submitted by {{author}},
+        <!--{{pluralize votes "Vote"}},
+        submitted by {{author}},-->
         <a href="{{pathFor 'spacePage'}}">{{pluralize reviewsCount "review"}}</a>
         {{#if ownSpace}}<a href="{{pathFor 'spaceEdit'}}">Edit</a>{{/if}}
       </p>
