Added header image and a bunch of art assets to siteAssets.

--- a/meteor-app/client/templates/includes/header.html
+++ b/meteor-app/client/templates/includes/header.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{pathFor 'home'}}"><img src="\siteAssets\greensqlogo.png" alt="GreenSquare"></a>
+      <a class="navbar-brand" href="{{pathFor 'home'}}"><img src="\siteAssets\greensqlogo.png" alt="GreenSquare" width="300" height="50"></a>
         {{> userLocation}}
     </div>
     <div class="collapse navbar-collapse" id="navigation">
