--- a/meteor-app/client/templates/maps/map.html
+++ b/meteor-app/client/templates/maps/map.html
@@ -1,5 +1,5 @@
-<template name="mapItem">>
+<template name="map">
     <div class="map-container">
-        {{> googleMap name="exampleMap" options=exampleMapOptions}}
+        {{> googleMap name="map" options=mapOptions}}
     </div>
-</template>
+</template>  
