--- a/meteor-app/client/templates/spaces/space_page.html
+++ b/meteor-app/client/templates/spaces/space_page.html
@@ -2,6 +2,7 @@
   <div class="space-page page">
     {{> spaceItem}}
       {{> spacePhoto}}
+      {{> map}}
   
     <ul class="comments">
       {{#each reviews}}
