--- a/meteor-app/client/stylesheets/style.css
+++ b/meteor-app/client/stylesheets/style.css
@@ -33,49 +33,26 @@ body {
   /* For modern browsers */
   /* For IE 6/7 (trigger hasLayout) */
   *zoom: 1;
-  position: relative;
   opacity: 1; }
-  .space:before, .space:after {
-    content: "";
-    display: table; }
   .space:after {
     clear: both; }
-  .space.invisible {
-    opacity: 0; }
-  .space.instant {
-    -webkit-transition: none;
-    -moz-transition: none;
-    -o-transition: none;
-    transition: none; }
   .space.animate{
     -webkit-transition: all 300ms 0ms;
     -moz-transition: all 300ms 0ms ease-in;
     -o-transition: all 300ms 0ms ease-in;
     transition: all 300ms 0ms ease-in; }
-  .space .upvote {
-    display: block;
-    margin: 7px 12px 0 0;
-    float: left; }
-  .space .space-content {
-    float: left; }
-    .space .space-content h3 {
-      margin: 0;
-      line-height: 1.4;
-      font-size: 18px; }
-      .space .space-content h3 a {
-        display: inline-block;
-        margin-right: 5px; }
-      .space .space-content h3 span {
-        font-weight: normal;
-        font-size: 14px;
-        display: inline-block;
-        color: #aaaaaa; }
-    .space .space-content p {
-      margin: 0; }
-  .space .discuss {
-    display: block;
-    float: right;
-    margin-top: 7px; }
+
+.thumbnail-legend {
+  background: none repeat scroll 0 0 #FFFFFF;
+  opacity: 1;
+  top:0;
+  left:0;
+  position: relative;
+}
+
+.thumbnail {
+  position:relative;
+}
 
 .reviews {
   list-style-type: none;
@@ -157,23 +134,4 @@ body {
   clear: both;
   margin-bottom: 5px;
   pointer-events: auto;
-}
-
-.map-container {
-  width: 800px;
-  max-width: 100%;
-  height: 500px;
-}
-
-.space-page-photo{
-  width: 800px;
-  max-width: 100%;
-  height: 500px;
-  overflow: hidden;
-}
-
-.space-list-photo{
-  width: 800px;
-  height: 300px;
-  overflow: hidden;
 }
