--- a/meteor-app/client/templates/spaces/space_item.html
+++ b/meteor-app/client/templates/spaces/space_item.html
@@ -1,11 +1,13 @@
 <template name="spaceItem">
-  <div class="space">
-    {{> spaceListPhoto}}
-    <div class="space-content">
-      <!--<h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>-->
+  <div style="background-size: {{width}}px auto;
+              background-image: url(/mouse.png);
+              background-repeat: no-repeat;
+              border: 1px solid black;
+              height: {{height}}px;
+              width: {{width}}px;"
+              class="thumbnail">
+    <div class="">
       <p>
-        <!--{{pluralize votes "Vote"}},
-        submitted by {{author}},-->
         <a href="{{pathFor 'spacePage'}}">{{pluralize reviewsCount "review"}}</a>
         {{#if ownSpace}}<a href="{{pathFor 'spaceEdit'}}">Edit</a>{{/if}}
       </p>
