--- a/meteor-app/client/stylesheets/style.css
+++ b/meteor-app/client/stylesheets/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Roboto'; /*a name to be used later*/
+  src: url('\siteAssets\robo.ttf'); /*URL to font*/
+}
+
 .grid-block, .main, .space, .reviews li, .review-form {
   background: #fff;
   border-radius: 3px;
@@ -9,7 +14,9 @@
 
 body {
   background: #eee;
-  color: #666666; }
+  color: #666666;
+  font-family: 'Roboto';
+}
 
 #main {
   position: relative;
@@ -21,10 +28,17 @@ body {
 }
 
 .navbar {
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  background-color: #7bc051;
+  border-width: 0px;
+  border-radius: 0px 0px 3px 3px;
+  
+}
   /* line 32, ../sass/style.scss */
   .navbar .navbar-inner {
     border-radius: 0px 0px 3px 3px; }
+
+
 
 #spinner {
   height: 300px; }
