Added map functionality to each space page + markers display green spaces on the map.

--- a/meteor-app/client/templates/spaces/space_page.html
+++ b/meteor-app/client/templates/spaces/space_page.html
@@ -1,8 +1,11 @@
 <template name="spacePage">
   <div class="space-page page">
     {{> spaceItem}}
-      {{> spacePhoto}}
-      {{> map}}
+    {{> spacePhoto}}
+    <div class="map-container">
+      {{> googleMap name="map" options=mapOptions}}
+    </div>
+
   
     <ul class="comments">
       {{#each reviews}}
