--- a/meteor-app/client/templates/spaces/space_submit.html
+++ b/meteor-app/client/templates/spaces/space_submit.html
@@ -6,9 +6,9 @@
       </div>
       <div class="controls">
           <label class="control-label" for="latitude">Latitude</label>
-          <input name="latitude" id="latitude" type="text" value="" class="form-control"/>
+          <input name="latitude" id="latitude" type="text" value="" class="form-control" readonly/>
           <label class="control-label" for="longitude">Longitude</label>
-          <input name="longitude" id="longitude" type="text" value="" class="form-control"/>
+          <input name="longitude" id="longitude" type="text" value="" class="form-control" readonly/>
 
           <script>
               function getCoords() {
