--- a/meteor-app/client/templates/application/layout.html
+++ b/meteor-app/client/templates/application/layout.html
@@ -1,5 +1,5 @@
 <template name="layout">
-  <div class="container-fluid">
+  <div class="container">
     {{> header}}
     {{> errors}}
     <div id="main">
