--- a/meteor-app/client/templates/includes/header.html
+++ b/meteor-app/client/templates/includes/header.html
@@ -7,10 +7,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{pathFor 'home'}}"><img src="\siteAssets\greensqlogox.png" alt="GreenSquare" width="300" height="50"></a>
+      <a class="navbar-brand" href="{{pathFor 'home'}}"><img src="\siteAssets\greensqlogo.png" alt="GreenSquare" width="300" height="50"></a>
         {{> userLocation}}
     </div>
-    <div class="collapse navbar-collapse" id="navigation">
+    <div class="collapse navbar-collapse" id="navigation" >
       <ul class="nav navbar-nav">
         <li class="{{activeRouteClass 'home' 'newSpaces'}}">
           <a href="{{pathFor 'newSpaces'}}">New</a>
