--- a/meteor-app/client/templates/spaces/space_item.html
+++ b/meteor-app/client/templates/spaces/space_item.html
@@ -1,17 +1,13 @@
 <template name="spaceItem">
-  <div style="background-size: {{width}}px auto;
-              background-image: url(/mouse.png);
-              background-repeat: no-repeat;
-              border: 1px solid black;
-              height: {{height}}px;
-              width: {{width}}px;"
-              class="thumbnail">
-    <div class="">
-      <p>
-        <a href="{{pathFor 'spacePage'}}">{{pluralize reviewsCount "review"}}</a>
-        {{#if ownSpace}}<a href="{{pathFor 'spaceEdit'}}">Edit</a>{{/if}}
-      </p>
+  <div class="card">
+      <img src="/open-space-1.jpg" class="card-img-top img-responsive" />
+    <div class="card card-block">
+        <h4 class="card-title">{{title}}</h4>
+        <p class="card-text">
+            <a href="{{pathFor 'spacePage'}}">{{pluralize reviewsCount "review"}}</a>
+            {{#if ownSpace}}<a href="{{pathFor 'spaceEdit'}}">Edit</a>{{/if}}
+        </p>
+        <a href="{{pathFor 'spacePage'}}" class="btn btn-primary">Discuss</a>
     </div>
-    <a href="{{pathFor 'spacePage'}}" class="discuss btn btn-default">Discuss</a>
   </div>
 </template>
