--- a/meteor-app/client/stylesheets/style.css
+++ b/meteor-app/client/stylesheets/style.css
@@ -33,6 +33,7 @@ body {
   border-width: 0px;
   border-radius: 0px 0px 3px 3px;
   color: white;
+  padding-bottom: 20px;
 }
   /* line 32, ../sass/style.scss */
   .navbar .navbar-inner {
