--- a/meteor-app/client/templates/spaces/space_item.html
+++ b/meteor-app/client/templates/spaces/space_item.html
@@ -2,7 +2,7 @@
   <div style="background-size: {{width}}px auto;
               background-image: url(/mouse.png);
               background-repeat: no-repeat;
-              border: 1px solid black;
+              border: 1px solid #777777;
               height: {{height}}px;
               width: {{width}}px;"
               class="thumbnail">
