--- a/meteor-app/client/templates/spaces/space_item.html
+++ b/meteor-app/client/templates/spaces/space_item.html
@@ -2,12 +2,11 @@
   <div class="card">
       <img src="/open-space-1.jpg" class="card-img-top img-responsive" />
     <div class="card card-block">
-        <h4 class="card-title">{{title}}</h4>
+        <a href="{{pathFor 'spacePage'}}"><h4 class="card-title">{{title}}</h4></a>
         <p class="card-text">
             <a href="{{pathFor 'spacePage'}}">{{pluralize reviewsCount "review"}}</a>
             {{#if ownSpace}}<a href="{{pathFor 'spaceEdit'}}">Edit</a>{{/if}}
         </p>
-        <a href="{{pathFor 'spacePage'}}" class="btn btn-primary">Discuss</a>
     </div>
   </div>
 </template>
