setting up image upload/filesystem

--- a/meteor-app/client/templates/spaces/space_submit.html
+++ b/meteor-app/client/templates/spaces/space_submit.html
@@ -22,6 +22,11 @@
               }
           </script>
 
+          <!--</comment><input name="picUpload" id="picUpload" type="file"/>!-->
+
+          <input name="fn" class="fn" type="file">
+          <!--button class="myFileInput">Upload</button!-->
+
           <label class="control-label" for="title">Title</label>
           <input name="title" id="title" type="text" value="" placeholder="Name of Space" class="form-control"/>
           <label class="control-label" for="address">Address</label>
