--- a/meteor-app/client/templates/spaces/space_page.html
+++ b/meteor-app/client/templates/spaces/space_page.html
@@ -1,7 +1,7 @@
 <template name="spacePage">
   <div class="space-page page">
     {{> spaceItem}}
-    {{> spacePhoto}}
+    <a href="{{this.filename}}" target="_blank"><img src="{{this.filename}}" alt=""/></a>
     <div class="map-container">
       {{> googleMap name="map" options=mapOptions}}
     </div>
