--- a/meteor-app/client/stylesheets/style.css
+++ b/meteor-app/client/stylesheets/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Roboto'; /*a name to be used later*/
-  src: url('\siteAssets\robo.ttf'); /*URL to font*/
+  src: url('siteAssets\Robo.ttf'); /*URL to font*/
 }
 
 .grid-block, .main, .space, .reviews li, .review-form {
