--- a/meteor-app/client/templates/reviews/review_submit.html
+++ b/meteor-app/client/templates/reviews/review_submit.html
@@ -5,6 +5,13 @@
             <label for="body">Review on this space</label>
             <textarea name="body" id="body" class="form-control" rows="3"></textarea>
             <span class="help-block">{{errorMessage 'body'}}</span>
+            <div class="rating">
+                <span><input type="radio" name="rating" id="str5" value="5" class="selectme"><label for="str5"></label></span>
+                <span><input type="radio" name="rating" id="str4" value="4" class="selectme"><label for="str4"></label></span>
+                <span><input type="radio" name="rating" id="str3" value="3" class="selectme"><label for="str3"></label></span>
+                <span><input type="radio" name="rating" id="str2" value="2" class="selectme"><label for="str2"></label></span>
+                <span><input type="radio" name="rating" id="str1" value="1" class="selectme"><label for="str1"></label></span>
+            </div>
         </div>
     </div>
     <button type="submit" class="btn btn-primary">Add Review</button>
