--- a/meteor-app/client/templates/reviews/review_item.html
+++ b/meteor-app/client/templates/reviews/review_item.html
@@ -5,20 +5,32 @@
             <span class="date">on {{submittedText}}</span>
         </h4>
         <p>{{body}}</p>
-        {{#if equals rating "1"}}
-            <p>Rating: <img class="img-rounded" src="/siteAssets/smallleaf.png"/></p>
-        {{/if}}
-        {{#if equals rating  "2"}}
-            <p>Rating: <img class="img-rounded" src="/siteAssets/smallleaf.png"/><img class="img-rounded" src="/siteAssets/smallleaf.png"/></p>
-    {{/if}}
-        {{#if equals rating  "3"}}
-            <p>Rating: <img class="img-rounded" src="/siteAssets/smallleaf.png"/><img class="img-rounded" src="/siteAssets/smallleaf.png"/><img class="img-rounded" src="/siteAssets/smallleaf.png"/></p>
-        {{/if}}
-        {{#if equals rating  "4"}}
-            <p>Rating: <img class="img-rounded" src="/siteAssets/smallleaf.png"/><img class="img-rounded" src="/siteAssets/smallleaf.png"/><img class="img-rounded" src="/siteAssets/smallleaf.png"/><img class="img-rounded" src="/siteAssets/smallleaf.png"/></p>
-        {{/if}}
-        {{#if equals rating "5"}}
-            <p>Rating: <img class="img-rounded" src="/siteAssets/smallleaf.png"/><img class="img-rounded" src="/siteAssets/smallleaf.png"/><img class="img-rounded" src="/siteAssets/smallleaf.png"/><img class="img-rounded" src="/siteAssets/smallleaf.png"/><img class="img-rounded" src="/siteAssets/smallleaf.png"/></p>
-        {{/if}}
+        <div>
+            {{#if equals rating "1"}}
+              <p> Rating: <img src="/siteAssets/smallleaf.png"/> </p>
+            {{/if}}
+            {{#if equals rating  "2"}}
+               <p> Rating: <img class="" src="/siteAssets/smallleaf.png"/>
+                <img class="" src="/siteAssets/smallleaf.png"/> </p>
+            {{/if}}
+            {{#if equals rating  "3"}}
+                 <p> Rating: <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
+                <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
+                <img class="img-rounded" src="/siteAssets/smallleaf.png"/> </p>
+            {{/if}}
+            {{#if equals rating  "4"}}
+                   <p> Rating: <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
+                <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
+                <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
+                <img class="img-rounded" src="/siteAssets/smallleaf.png"/> </p>
+            {{/if}}
+            {{#if equals rating "5"}}
+                <p> Rating: <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
+                <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
+                <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
+                <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
+                <img class="img-rounded" src="/siteAssets/smallleaf.png"/> </p>
+            {{/if}}
+        </div>
     </li>
 </template>
