--- a/meteor-app/client/templates/spaces/space_submit.html
+++ b/meteor-app/client/templates/spaces/space_submit.html
@@ -24,7 +24,7 @@
 
           <!--</comment><input name="picUpload" id="picUpload" type="file"/>!-->
 
-          <input name="fn" class="fn" type="file">
+          <input name="fn" class="myFileInput" type="file">
           <!--button class="myFileInput">Upload</button!-->
 
           <label class="control-label" for="title">Title</label>
