--- a/meteor-app/client/templates/reviews/review_item.html
+++ b/meteor-app/client/templates/reviews/review_item.html
@@ -7,29 +7,19 @@
         <p>{{body}}</p>
         <div>
             {{#if equals rating "1"}}
-              <p> Rating: <img src="/siteAssets/smallleaf.png"/> </p>
+              <p> Rating: {{rating}} <img src="/siteAssets/leave1.png"/> </p>
             {{/if}}
             {{#if equals rating  "2"}}
-               <p> Rating: <img class="" src="/siteAssets/smallleaf.png"/>
-                <img class="" src="/siteAssets/smallleaf.png"/> </p>
+               <p> Rating: {{rating}} <img class="" src="/siteAssets/leave2.png"/> </p>
             {{/if}}
             {{#if equals rating  "3"}}
-                 <p> Rating: <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
-                <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
-                <img class="img-rounded" src="/siteAssets/smallleaf.png"/> </p>
+                 <p> Rating: {{rating}} <img class="img-rounded" src="/siteAssets/leave3.png"/> </p>
             {{/if}}
             {{#if equals rating  "4"}}
-                   <p> Rating: <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
-                <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
-                <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
-                <img class="img-rounded" src="/siteAssets/smallleaf.png"/> </p>
+                   <p> Rating: {{rating}} <img class="img-rounded" src="/siteAssets/leave4.png"/> </p>
             {{/if}}
             {{#if equals rating "5"}}
-                <p> Rating: <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
-                <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
-                <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
-                <img class="img-rounded" src="/siteAssets/smallleaf.png"/>
-                <img class="img-rounded" src="/siteAssets/smallleaf.png"/> </p>
+                <p> Rating: {{rating}} <img class="img-rounded" src="/siteAssets/leave5.png"/> </p>
             {{/if}}
         </div>
     </li>
