replaced greek chars

--- a/meteor-app/client/templates/spaces/spaces_list.html
+++ b/meteor-app/client/templates/spaces/spaces_list.html
@@ -5,7 +5,7 @@
     <div class="spaces">
       <!-- Set up reactive grid -->
       <div id="spacegrid">
-        {{#each spaces}}
+        {{#each hackySpaces}}
           {{> spaceItem}}
         {{/each}}
       </div>
