fixed home button not working

--- a/meteor-app/client/templates/includes/header.html
+++ b/meteor-app/client/templates/includes/header.html
@@ -13,7 +13,7 @@
       <ul class="nav navbar-nav">
         {{#if currentUser}}
           <li class="{{activeRouteClass 'spaceSubmit'}}">
-            <a href="{{pathFor 'spaceSubmit'}}">Submit Space</a>
+            <a href="{{pathFor 'nearSpaces'}}">Submit Space</a>
           </li>
           <li class="dropdown">
             {{> notifications}}
