--- a/meteor-app/client/templates/includes/splash.html
+++ b/meteor-app/client/templates/includes/splash.html
@@ -3,5 +3,5 @@
         <img src="/siteAssets/citybg.jpg" alt="Mountain View" style="width:100%;height:100%;">
     </div>
     <img src="/siteAssets/gslay.png" alt="Mountain View" style="position: absolute; width:600px;height:80px; left:50%; top:23%; margin-left: -300px;">
-    <a href=""><img src="/siteAssets/gsmarker.png" alt="Mountain View" style="position: absolute; width:250px;height:250px; left:50%; top:44%; margin-left: -125px;"></a>
+    <a href="{{pathFor 'nearSpaces'}}"><img src="/siteAssets/gsmarker.png" alt="Mountain View" style="position: absolute; width:250px;height:250px; left:50%; top:44%; margin-left: -125px;"></a>
 </template>
