--- a/meteor-app/client/templates/spaces/space_item.html
+++ b/meteor-app/client/templates/spaces/space_item.html
@@ -1,6 +1,6 @@
 <template name="spaceItem">
   <div class="card">
-      <img src={{getImg}} class="cardimg" />
+      <img src={{getImg}} class="card-img" />
     <div class="card card-block">
 
         <h4 class="card-title"><a href="{{pathFor 'spacePage'}}" >{{title}}</a></h4>
